--- a/index.html
+++ b/index.html
@@ -5,32 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Moreno Fernández | h4cksito</title>
   <style>
-    :root{
-      --bg:#0d1117;
-      --surface:#161b22;
-      --accent:#58a6ff;
-      --text:#e6edf3;
-      --muted:#8b949e;
+    :root {
+      --bg: #0d1117;
+      --surface: #161b22;
+      --accent: #79c0ff;
+      --text: #c9d1d9;
+      --muted: #8b949e;
+      --border: #30363d;
     }
-    *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,Segoe UI,Roboto,sans-serif;}
-    body{background:var(--bg);color:var(--text);line-height:1.6;}
-    header{padding:3rem 1rem;text-align:center;background:var(--surface);box-shadow:0 4px 10px rgba(0,0,0,.6);}    
-    h1{font-size:2.5rem;font-weight:700;margin-bottom:.5rem;}
-    h2{font-size:1.8rem;margin:2.5rem 0 1rem 0;text-align:center;}
-    p.lead{font-size:1.1rem;color:var(--muted);}
 
-    nav{display:flex;justify-content:center;gap:.5rem;margin-top:1.5rem;flex-wrap:wrap;}
-    nav a{background:var(--accent);color:#fff;padding:.6rem 1rem;border-radius:8px;font-weight:600;text-decoration:none;transition:all .2s cubic-bezier(.4,0,.2,1);}    
-    nav a:hover{transform:translateY(-2px);box-shadow:0 4px 12px rgba(88,166,255,.4);}    
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    }
 
-    section{max-width:850px;margin:0 auto;padding:1rem;}
-    .card{background:var(--surface);border-radius:12px;padding:1.5rem;margin-bottom:2rem;box-shadow:0 2px 6px rgba(0,0,0,.4);}    
-    .card h3{margin-bottom:.7rem;font-size:1.3rem;}
-    ul{list-style:none;padding-left:1rem;}
-    ul li::before{content:"• ";color:var(--accent);}    
+    body {
+      background-color: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+      padding-bottom: 2rem;
+    }
 
-    footer{padding:2rem 1rem;text-align:center;color:var(--muted);}    
-    a{color:var(--accent);}    
+    header {
+      padding: 3rem 1rem 2rem;
+      background: var(--surface);
+      text-align: center;
+      border-bottom: 1px solid var(--border);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+    }
+
+    p.lead {
+      font-size: 1.2rem;
+      color: var(--muted);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 0.8rem;
+      flex-wrap: wrap;
+      margin-top: 1.5rem;
+    }
+
+    nav a {
+      background: var(--accent);
+      color: #000;
+      padding: 0.6rem 1.1rem;
+      border-radius: 8px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.25s ease;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    nav a:hover {
+      transform: translateY(-2px);
+      background: #a5d6ff;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    .card {
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+    }
+
+    .card h3 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      color: var(--accent);
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 1rem;
+    }
+
+    ul li::before {
+      content: "• ";
+      color: var(--accent);
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      padding: 2rem 1rem;
+      text-align: center;
+      color: var(--muted);
+      border-top: 1px solid var(--border);
+    }
   </style>
 </head>
 <body>
@@ -85,7 +175,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Daniel Moreno Fernández • Hecho con ❤️ y un poco de JavaScript (vale, sin JS pero con mucha pasión).</p>
+    <p>© 2025 Daniel Moreno Fernández • Hecho con ❤️ y un poco de ingeniería inversa.</p>
   </footer>
 </body>
 </html>
