--- a/index.html
+++ b/index.html
@@ -4,110 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Moreno Fernández | h4cksito</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #0d1117;
-      --surface: #161b22;
-      --accent: #79c0ff;
-      --text: #c9d1d9;
-      --muted: #8b949e;
-      --border: #30363d;
+      --bg: #1e1f26;
+      --primary: #00ff99;
+      --text: #f8f8f2;
+      --muted: #888;
+      --panel: #2c2f36;
+      --border: #444;
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+      box-sizing: border-box;
     }
 
     body {
-      background-color: var(--bg);
+      background: var(--bg);
       color: var(--text);
+      font-family: 'Inter', sans-serif;
       line-height: 1.6;
-      padding-bottom: 2rem;
     }
 
     header {
-      padding: 3rem 1rem 2rem;
-      background: var(--surface);
       text-align: center;
+      padding: 4rem 1rem 2rem;
+      background-color: var(--panel);
       border-bottom: 1px solid var(--border);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
     }
 
     h1 {
       font-size: 2.8rem;
-      margin-bottom: 0.5rem;
+      font-weight: 700;
+      color: var(--primary);
     }
 
     p.lead {
-      font-size: 1.2rem;
       color: var(--muted);
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
     }
 
     nav {
       display: flex;
       justify-content: center;
-      gap: 0.8rem;
       flex-wrap: wrap;
-      margin-top: 1.5rem;
+      gap: 1rem;
+      margin-top: 2rem;
     }
 
     nav a {
-      background: var(--accent);
-      color: #000;
-      padding: 0.6rem 1.1rem;
-      border-radius: 8px;
-      font-weight: 600;
+      background-color: transparent;
+      border: 2px solid var(--primary);
+      color: var(--primary);
+      padding: 0.5rem 1.2rem;
+      border-radius: 6px;
       text-decoration: none;
-      transition: all 0.25s ease;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+      font-weight: 600;
+      transition: background 0.3s;
     }
 
     nav a:hover {
-      transform: translateY(-2px);
-      background: #a5d6ff;
+      background: var(--primary);
+      color: #000;
     }
 
     main {
-      max-width: 900px;
-      margin: 2rem auto;
+      max-width: 800px;
+      margin: 3rem auto;
       padding: 0 1rem;
     }
 
     .card {
-      background: var(--surface);
-      border: 1px solid var(--border);
-      border-radius: 12px;
+      background-color: var(--panel);
+      border-left: 4px solid var(--primary);
       padding: 2rem;
       margin-bottom: 2rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      transition: transform 0.2s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-4px);
+      border-radius: 8px;
     }
 
     .card h3 {
       font-size: 1.5rem;
+      color: var(--primary);
       margin-bottom: 1rem;
-      color: var(--accent);
     }
 
     ul {
-      list-style: none;
-      padding-left: 1rem;
+      padding-left: 1.2rem;
     }
 
-    ul li::before {
-      content: "• ";
-      color: var(--accent);
+    ul li {
+      margin-bottom: 0.5rem;
+    }
+
+    ul li::marker {
+      color: var(--primary);
     }
 
     a {
-      color: var(--accent);
+      color: var(--primary);
       text-decoration: none;
     }
 
@@ -116,17 +113,18 @@
     }
 
     footer {
-      padding: 2rem 1rem;
       text-align: center;
-      color: var(--muted);
+      padding: 2rem 1rem;
       border-top: 1px solid var(--border);
+      color: var(--muted);
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Daniel Moreno Fernández</h1>
-    <p class="lead">Apasionado de la ciberseguridad | Alias <strong>h4cksito</strong></p>
+    <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
 
     <nav>
       <a href="#about">Sobre mí</a>
@@ -141,41 +139,3 @@
     <section id="about" class="card">
       <h3>🧠 Sobre mí</h3>
       <p>Soy Daniel, estudiante de hacking ético con el objetivo de convertirme en pentester profesional. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
-    </section>
-
-    <section id="training" class="card">
-      <h3>📚 Formación</h3>
-      <ul>
-        <li>Rutas <em>Junior Penetration Tester</em> y <em>Web Application Security</em> en TryHackMe</li>
-        <li>Especialización en escalada de privilegios y seguridad web</li>
-        <li>Objetivo: Certificación <strong>eJPTv2</strong> antes de fin de año</li>
-      </ul>
-    </section>
-
-    <section id="writeups" class="card">
-      <h3>🧪 Writeups</h3>
-      <p>Aquí encontrarás mis reportes técnicos y writeups de CTFs. <br>Visita la pestaña de <a href="https://github.com/h4cksito?tab=repositories">repositorios</a> para verlos todos.</p>
-    </section>
-
-    <section id="now" class="card">
-      <h3>🚧 En progreso</h3>
-      <ul>
-        <li>Preparación intensiva para el eJPT</li>
-        <li>Documentar nuevas máquinas de TryHackMe</li>
-        <li>Perfeccionar red teaming y evasión de defensas</li>
-      </ul>
-    </section>
-
-    <section id="contact" class="card">
-      <h3>📫 Contacto</h3>
-      <p>📧 <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br>
-         🐦 <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a>
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Daniel Moreno Fernández • Hecho con ❤️ y un poco de ingeniería inversa.</p>
-  </footer>
-</body>
-</html>
