--- a/index.html
+++ b/index.html
@@ -4,91 +4,113 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Moreno Fernández | h4cksito</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #1e1f26;
-      --primary: #00ff99;
-      --text: #f8f8f2;
-      --muted: #888;
-      --panel: #2c2f36;
-      --border: #444;
+      --bg: #0b1e2d;
+      --text: #e8f1f8;
+      --muted: #94a3b8;
+      --primary: #38bdf8;
+      --panel: rgba(18, 39, 56, 0.85);
+      --border: #1e3a4c;
     }
 
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
     }
 
     body {
-      background: var(--bg);
+      background-color: var(--bg);
       color: var(--text);
-      font-family: 'Inter', sans-serif;
       line-height: 1.6;
+      backdrop-filter: blur(2px);
     }
 
     header {
-      text-align: center;
-      padding: 4rem 1rem 2rem;
-      background-color: var(--panel);
+      padding: 2rem 1rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      background-color: var(--bg);
       border-bottom: 1px solid var(--border);
     }
 
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .intro {
+      max-width: 500px;
+    }
+
     h1 {
-      font-size: 2.8rem;
-      font-weight: 700;
+      font-size: 2rem;
+      font-weight: 600;
       color: var(--primary);
     }
 
     p.lead {
+      font-size: 1rem;
       color: var(--muted);
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
+      margin-top: 0.3rem;
     }
 
     nav {
       display: flex;
-      justify-content: center;
       flex-wrap: wrap;
       gap: 1rem;
-      margin-top: 2rem;
+      margin-top: 1rem;
     }
 
     nav a {
-      background-color: transparent;
-      border: 2px solid var(--primary);
+      padding: 0.4rem 0.8rem;
+      border: 1px solid var(--primary);
       color: var(--primary);
-      padding: 0.5rem 1.2rem;
-      border-radius: 6px;
       text-decoration: none;
-      font-weight: 600;
-      transition: background 0.3s;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      transition: background-color 0.2s;
     }
 
     nav a:hover {
-      background: var(--primary);
-      color: #000;
+      background-color: var(--primary);
+      color: var(--bg);
     }
 
     main {
-      max-width: 800px;
-      margin: 3rem auto;
+      max-width: 680px;
+      margin: 2rem auto;
       padding: 0 1rem;
     }
 
     .card {
-      background-color: var(--panel);
-      border-left: 4px solid var(--primary);
-      padding: 2rem;
-      margin-bottom: 2rem;
+      background: var(--panel);
+      padding: 1.5rem;
       border-radius: 8px;
+      margin-bottom: 2rem;
+      border: 1px solid var(--border);
+      box-shadow: 0 0 12px rgba(56, 189, 248, 0.05);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 20px rgba(56, 189, 248, 0.15);
     }
 
     .card h3 {
-      font-size: 1.5rem;
-      color: var(--primary);
+      font-size: 1.2rem;
       margin-bottom: 1rem;
+      color: var(--primary);
     }
 
     ul {
@@ -97,10 +119,6 @@
 
     ul li {
       margin-bottom: 0.5rem;
-    }
-
-    ul li::marker {
-      color: var(--primary);
     }
 
     a {
@@ -115,27 +133,68 @@
     footer {
       text-align: center;
       padding: 2rem 1rem;
-      border-top: 1px solid var(--border);
+      font-size: 0.85rem;
       color: var(--muted);
-      font-size: 0.9rem;
+      border-top: 1px solid var(--border);
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Daniel Moreno Fernández</h1>
-    <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
-
-    <nav>
-      <a href="#about">Sobre mí</a>
-      <a href="#training">Formación</a>
-      <a href="#writeups">Writeups</a>
-      <a href="#now">En progreso</a>
-      <a href="#contact">Contacto</a>
-    </nav>
+    <img src="foto.jpg" alt="Daniel Moreno Fernández" class="profile-pic">
+    <div class="intro">
+      <h1>Daniel Moreno Fernández</h1>
+      <p class="lead">Apasionado de la ciberseguridad • Alias h4cksito</p>
+      <nav>
+        <a href="#about">Sobre mí</a>
+        <a href="#training">Formación</a>
+        <a href="#writeups">Writeups</a>
+        <a href="#now">En progreso</a>
+        <a href="#contact">Contacto</a>
+      </nav>
+    </div>
   </header>
 
   <main>
     <section id="about" class="card">
-      <h3>🧠 Sobre mí</h3>
+      <h3>Sobre mí</h3>
       <p>Soy Daniel, estudiante de hacking ético con el objetivo de convertirme en pentester profesional. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
+    </section>
+
+    <section id="training" class="card">
+      <h3>Formación</h3>
+      <ul>
+        <li>Rutas Junior Penetration Tester y Web Application Security en TryHackMe</li>
+        <li>Especialización en escalada de privilegios y seguridad web</li>
+        <li>Objetivo: Certificación eJPTv2 antes de fin de año</li>
+      </ul>
+    </section>
+
+    <section id="writeups" class="card">
+      <h3>Writeups</h3>
+      <p>Aquí encontrarás mis reportes técnicos y writeups de CTFs. Visita la pestaña de <a href="https://github.com/h4cksito?tab=repositories">repositorios</a> para verlos todos.</p>
+    </section>
+
+    <section id="now" class="card">
+      <h3>En progreso</h3>
+      <ul>
+        <li>Preparación intensiva para el eJPT</li>
+        <li>Documentar nuevas máquinas de TryHackMe</li>
+        <li>Perfeccionar red teaming y evasión de defensas</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="card">
+      <h3>Contacto</h3>
+      <p>
+        Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br>
+        Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Daniel Moreno Fernández</p>
+  </footer>
+</body>
+</html>
