--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <nav>
         <a href="#about">Sobre mí</a>
         <a href="#training">Formación</a>
-        <a href="#writeups">Writeups</a>
+        <a href="write.html">Writeups</a>
         <a href="#now">En progreso</a>
         <a href="#contact">Contacto</a>
       </nav>
