--- a/write.html
+++ b/write.html
@@ -45,7 +45,7 @@
 <body>
   <h1>Mis Writeups</h1>
   <ul>
-    <li><a href="writeups/mrrobot.html">CTF - Mr. Robot</a></li>
+    <li><a href="write/mrrobot.html">CTF - Mr. Robot</a></li>
     <li><a href="writeups/rabbitstore.html">CTF - Rabbit Store</a></li>
     <!-- Añade más enlaces aquí -->
   </ul>
