--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <header>
-    <img src="foto.jpg" alt="Daniel Moreno Fernández" class="profile-pic">
+    <img src="IMG_6168.jpeg" alt="Daniel Moreno Fernández" class="profile-pic">
     <div class="intro">
       <h1>Daniel Moreno Fernández</h1>
       <p class="lead">Apasionado de la ciberseguridad • Alias h4cksito</p>
