--- a/write.html
+++ b/write.html
@@ -46,7 +46,7 @@
   <h1>Mis Writeups</h1>
   <ul>
     <li><a href="writeup/mrrobot.html">CTF - Mr. Robot</a></li>
-    <li><a href="writeups/rabbitstore.html">CTF - Rabbit Store</a></li>
+    <li><a href="writeup/rabbit.html">CTF - Rabbit Store</a></li>
     <!-- Añade más enlaces aquí -->
   </ul>
 </body>
