--- a/write.html
+++ b/write.html
@@ -45,6 +45,7 @@
 <body>
   <h1>Mis Writeups</h1>
   <ul>
+    <li><a href="writeup/publisher.html">CTF - Publisher 17/07/2025</a></li>
     <li><a href="writeup/rabbit.html">CTF - Ignite 16/07/2025</a></li>
     <li><a href="writeup/rabbit.html">CTF - Rabbit Store 14/07/2025</a></li>
     <li><a href="writeup/mrrobot.html">CTF - Mr. Robot 29/06/2025</a></li>
