--- a/write.html
+++ b/write.html
@@ -46,10 +46,10 @@
   <h1>Mis Writeups</h1>
   <ul>
     <li><a href="https://witty-feet-07c.notion.site/Billing-THM-Easy-233bb3079a3f8047b72bd2b3ce5fd258">CTF - Billing 19/07/2025</a></li>
-    <li><a href="writeup/publisher.html">CTF - Publisher 17/07/2025</a></li>
-    <li><a href="writeup/rabbit.html">CTF - Ignite 16/07/2025</a></li>
-    <li><a href="writeup/rabbit.html">CTF - Rabbit Store 14/07/2025</a></li>
-    <li><a href="writeup/mrrobot.html">CTF - Mr. Robot 29/06/2025</a></li>
+    <li><a href="https://witty-feet-07c.notion.site/Publisher-THM-Easy-235bb3079a3f80f49026e951c9310335?source=copy_link">CTF - Publisher 17/07/2025</a></li>
+    <li><a href="https://witty-feet-07c.notion.site/Ignite-THM-Easy-235bb3079a3f801c8858dcc39b3b534c?source=copy_link">CTF - Ignite 16/07/2025</a></li>
+    <li><a href="https://witty-feet-07c.notion.site/Rabbit-Store-THM-Medium-235bb3079a3f804fab00c450f2a56e61?source=copy_link">CTF - Rabbit Store 14/07/2025</a></li>
+    <li><a href="https://witty-feet-07c.notion.site/Mr-Robot-THM-Medium-235bb3079a3f802c9742d30ba81ce6e0?source=copy_link">CTF - Mr. Robot 29/06/2025</a></li>
     <!-- Añade más enlaces aquí -->
   </ul>
 </body>
