--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </ul>
     </section>
 
-    <section id="writeups" class="card">
-      <h3>Writeups</h3>
-      <p>Aquí encontrarás mis reportes técnicos y writeups de CTFs. Visita la pestaña de <a href="https://github.com/h4cksito?tab=repositories">repositorios</a> para verlos todos.</p>
+    <section id="certificate" class="card">
+      <h3>Certificaciones</h3>
+      <p>Certificación THM de Junior Pentester <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf"></a></p>
     </section>
 
     <section id="now" class="card">
