--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
       <ul>
         <li>Rutas Junior Penetration Tester y Web Application Security en TryHackMe</li>
         <li>Especialización en escalada de privilegios y seguridad web</li>
-        <li>Objetivo: Certificación eJPTv2 antes de fin de año</li>
       </ul>
     </section>
 
     <section id="certificate" class="card">
       <h3>Certificaciones</h3>
-      <p>Certificación THM de Junior Pentester <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf"></a></p>
+      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf">Jr Penetration Tester</a></p>
     </section>
 
     <section id="now" class="card">
