--- a/write.html
+++ b/write.html
@@ -45,6 +45,7 @@
 <body>
   <h1>Mis Writeups</h1>
   <ul>
+    <li><a href="https://witty-feet-07c.notion.site/The-Sticker-Shop-THM-Easy-235bb3079a3f8035850bcb42fd44bf9c?source=copy_link">CTF - The Sticker Shop 19/07/2025</a></li>
     <li><a href="https://witty-feet-07c.notion.site/Billing-THM-Easy-233bb3079a3f8047b72bd2b3ce5fd258">CTF - Billing 19/07/2025</a></li>
     <li><a href="https://witty-feet-07c.notion.site/Publisher-THM-Easy-235bb3079a3f80f49026e951c9310335?source=copy_link">CTF - Publisher 17/07/2025</a></li>
     <li><a href="https://witty-feet-07c.notion.site/Ignite-THM-Easy-235bb3079a3f801c8858dcc39b3b534c?source=copy_link">CTF - Ignite 16/07/2025</a></li>
