--- a/index.html
+++ b/index.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portafolio de Daniel Moreno Fernández (h4cksito) - Apasionado por la ciberseguridad y el hacking ético.">
   <title>Daniel Moreno Fernández | h4cksito</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="IMG_6168.jpeg" alt="Daniel Moreno Fernández" class="profile-pic">
-    <div class="intro">
-      <h1>Daniel Moreno Fernández</h1>
-      <p class="lead">Apasionado de la ciberseguridad • Alias h4cksito</p>
-      <nav>
-        <a href="#about">Sobre mí</a>
-        <a href="#training">Formación</a>
-        <a href="write.html">Writeups</a>
-        <a href="#now">En progreso</a>
-        <a href="#contact">Contacto</a>
-      </nav>
+    <div class="container">
+      <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" />
+      <div class="intro">
+        <h1>Daniel Moreno Fernández</h1>
+        <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
+        <nav aria-label="Menú principal">
+          <ul class="nav-list">
+            <li><a href="#about">Sobre mí</a></li>
+            <li><a href="#training">Formación</a></li>
+            <li><a href="write.html">Writeups</a></li>
+            <li><a href="#now">En progreso</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
-  <main>
-    <section id="about" class="card">
-      <h3>Sobre mí</h3>
-      <p>Soy Daniel, estudiante de hacking ético con el objetivo de convertirme en pentester profesional. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
+  <main class="container">
+    <section id="about" class="card" aria-label="Sobre mí">
+      <h2>Sobre mí</h2>
+      <p>Soy <strong>Daniel</strong>, estudiante de <em>hacking ético</em> con el objetivo de convertirme en <strong>pentester profesional</strong>. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
     </section>
 
-    <section id="training" class="card">
-      <h3>Formación</h3>
+    <section id="training" class="card" aria-label="Formación">
+      <h2>Formación</h2>
       <ul>
-        <li>Rutas Junior Penetration Tester y Web Application Security en TryHackMe</li>
-        <li>Especialización en escalada de privilegios y seguridad web</li>
+        <li>Rutas <strong>Junior Penetration Tester</strong> y <strong>Web Application Security</strong> en TryHackMe</li>
+        <li>Especialización en <em>escalada de privilegios</em> y <em>seguridad web</em></li>
       </ul>
     </section>
 
-    <section id="certificate" class="card">
-      <h3>Certificaciones</h3>
-      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf">Jr Penetration Tester</a></p>
+    <section id="certificate" class="card" aria-label="Certificaciones">
+      <h2>Certificaciones</h2>
+      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf" target="_blank" rel="noopener noreferrer"><strong>Jr Penetration Tester</strong></a></p>
     </section>
 
-    <section id="now" class="card">
-      <h3>En progreso</h3>
+    <section id="now" class="card" aria-label="En progreso">
+      <h2>En progreso</h2>
       <ul>
-        <li>Preparación intensiva para el eJPT</li>
-        <li>Documentar nuevas máquinas de TryHackMe</li>
-        <li>Perfeccionar red teaming y evasión de defensas</li>
+        <li>Preparación intensiva para el <strong>eJPT</strong></li>
+        <li>Documentar nuevas máquinas de <strong>TryHackMe</strong></li>
+        <li>Perfeccionar <em>red teaming</em> y evasión de defensas</li>
       </ul>
     </section>
 
-    <section id="contact" class="card">
-      <h3>Contacto</h3>
+    <section id="contact" class="card" aria-label="Contacto">
+      <h2>Contacto</h2>
       <p>
-        Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br>
+        Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
         Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a>
       </p>
     </section>
