--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Daniel Moreno Fernández</h1>
         <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
         <nav aria-label="Menú principal">
-          <ul class="nav-list">
+          <ul class="nav">
             <li><a href="#about">Sobre mí</a></li>
             <li><a href="#training">Formación</a></li>
             <li><a href="write.html">Writeups</a></li>
