--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         <h1>Daniel Moreno Fernández</h1>
         <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
         <nav aria-label="Menú principal">
-          <ul class="nav">
-            <li><a href="#about">Sobre mí</a></li>
-            <li><a href="#training">Formación</a></li>
-            <li><a href="write.html">Writeups</a></li>
-            <li><a href="#now">En progreso</a></li>
-            <li><a href="#contact">Contacto</a></li>
-          </ul>
-        </nav>
+          <nav>
+           <a href="#about">Sobre mí</a>
+           <a href="#training">Formación</a>
+           <a href="write.html">Writeups</a>
+           <a href="#now">En progreso</a>
+           <a href="#contact">Contacto</a>
+          </nav>
       </div>
     </div>
   </header>
