--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="certificate" class="card" aria-label="Certificaciones">
       <h2>Certificaciones</h2>
       <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf" target="_blank" rel="noopener noreferrer"><strong>Jr Penetration Tester</strong></a> 29/06/2025</p>
-      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf" target="_blank" rel="noopener noreferrer"><strong>Jr Penetration Tester</strong></a> 23/07/2025</p>
+      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-0IRVOB3JPI.png" target="_blank" rel="noopener noreferrer"><strong>Web Fundamentals</strong></a> 23/07/2025</p>
     </section>
 
     <section id="now" class="card" aria-label="En progreso">
