--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav aria-label="Menú principal">
           <nav>
            <a href="#about">Sobre mí</a>
+           <a href="/auditorias">Auditorías</a>
            <a href="https://tryhackme.com/p/h4cksito">Tryhackme</a>
            <a href="#training">Formación</a>
            <a href="write.html">Writeups</a>
