--- a/auditorias/index.html
+++ b/auditorias/index.html
@@ -1,1 +1,16 @@
-adsad
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portafolio de Daniel Moreno Fernández (h4cksito) - Apasionado por la ciberseguridad y el hacking ético.">
+  <title>Daniel Moreno Fernández | h4cksito</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <p>© 2025 Daniel Moreno Fernández</p>
+  </footer>
+</body>
+</html>
