--- a/auditorias/index.html
+++ b/auditorias/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main class="container">
+    <section id="about" class="card" aria-label="Sobre mí">
+      <h2>Sobre mí</h2>
+      <p>Auditoría a <a href=¨¨>Staminamarketing.com 28/07/2025</a></p>
+    </section>
     <p>© 2025 Daniel Moreno Fernández</p>
   </footer>
 </body>
