--- a/auditorias/index.html
+++ b/auditorias/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,11 +11,25 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main class="container">
+  <header>
+    <div class="container">
+      <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" />
+      <div class="intro">
+        <h1>Daniel Moreno Fernández</h1>
+        <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
     <section id="about" class="card" aria-label="Sobre mí">
-      <h2>Sobre mí</h2>
-      <p>Auditoría a <a href=¨¨>Staminamarketing.com 28/07/2025</a></p>
+      <h2>Auditorías</h2>
+      <p></p>
     </section>
+
+  </main>
+
+  <footer>
     <p>© 2025 Daniel Moreno Fernández</p>
   </footer>
 </body>
