--- a/auditorias/index.html
+++ b/auditorias/index.html
@@ -1,36 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portafolio de Daniel Moreno Fernández (h4cksito) - Apasionado por la ciberseguridad y el hacking ético.">
-  <title>Daniel Moreno Fernández | h4cksito</title>
+  <meta name="description" content="Auditorías realizadas por Daniel Moreno Fernández (h4cksito).">
+  <title>Auditorías | h4cksito</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
+
   <header>
-    <div class="container">
-      <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" />
-      <div class="intro">
-        <h1>Daniel Moreno Fernández</h1>
-        <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
-      </div>
+    <img src="../B7A63400-C6D0-4FEF-BC96-9AA68EF343BB.jpeg" alt="Logo de h4cksito" class="logo" />
+    <div class="intro">
+      <h1>Auditorías realizadas</h1>
+      <p class="lead">Colaboraciones éticas en ciberseguridad</p>
+      <nav>
+        <a href="../index.html">Inicio</a>
+        <a href="../#contact">Contacto</a>
+      </nav>
     </div>
   </header>
 
-  <main class="container">
-    <section id="about" class="card" aria-label="Sobre mí">
-      <h2>Auditorías</h2>
-      <p></p>
+  <main>
+    <section class="card">
+      <h3>Stamina Marketing</h3>
+      <p>📅 Fecha de realización: <strong>28 julio 2025</strong></p>
+      <img src="logos/stamina.png" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
     </section>
-
   </main>
 
   <footer>
     <p>© 2025 Daniel Moreno Fernández</p>
   </footer>
+
 </body>
 </html>
