--- a/auditorias/auditorias.html
+++ b/auditorias/auditorias.html
@@ -27,7 +27,7 @@
     <section class="card">
       <h3>Stamina Marketing</h3>
       <p>📅 Fecha de realización: <strong>28 julio 2025</strong></p>
-      <img src="logos/stamina.png" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
+      <img src="logos/Logotipo_STAMINA_turquesa.svg" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
     </section>
   </main>
 
