--- a/auditorias/auditorias.html
+++ b/auditorias/auditorias.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img src="../B7A63400-C6D0-4FEF-BC96-9AA68EF343BB.jpeg" alt="Logo de h4cksito" class="logo" />
+    <img src="IMG_6168.jpeg" alt="Logo de h4cksito" class="logo" />
     <div class="intro">
       <h1>Auditorías realizadas</h1>
       <p class="lead">Colaboraciones éticas en ciberseguridad</p>
@@ -27,7 +27,7 @@
     <section class="card">
       <h3>Stamina Marketing</h3>
       <p>📅 Fecha de realización: <strong>28 julio 2025</strong></p>
-      <img src="logos/Logotipo_STAMINA_turquesa.svg" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
+      <img src="/logos/Logotipo_STAMINA_turquesa.svg" alt="Logo de Stamina Marketing" style="max-width: 200px; margin-top: 1rem;" />
     </section>
   </main>
 
