--- a/auditorias/auditorias.html
+++ b/auditorias/auditorias.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img src="IMG_6168.jpeg" alt="Logo de h4cksito" class="logo" />
+    <img src="https://h4cksito.github.io/IMG_6168.jpeg" alt="Logo de h4cksito" class="logo" />
     <div class="intro">
       <h1>Auditorías realizadas</h1>
       <p class="lead">Colaboraciones éticas en ciberseguridad</p>
