--- a/auditorias.html
+++ b/auditorias.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img src="https://h4cksito.github.io/IMG_6168.jpeg" alt="Logo de h4cksito" class="logo" />
+    <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" />
     <div class="intro">
       <h1>Auditorías realizadas</h1>
       <p class="lead">Colaboraciones éticas en ciberseguridad</p>
