--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <p>
         Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
         Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a>
+        Linkedin: <a href="https://www.linkedin.com/in/danielmoref" target="_blank" rel="noopener noreferrer">Daniel Moreno Fernández</a>
       </p>
     </section>
   </main>
