--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2>Contacto</h2>
       <p>
         Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
-        Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a>
+        Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a><br />
         Linkedin: <a href="https://www.linkedin.com/in/danielmoref" target="_blank" rel="noopener noreferrer">Daniel Moreno Fernández</a>
       </p>
     </section>
