--- a/write.html
+++ b/write.html
@@ -1,22 +1,58 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Writeups de CTF de Daniel Moreno Fernández (h4cksito)." />
   <title>Writeups | h4cksito</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Mis Writeups</h1>
-  <ul>
-    <li><a href="https://www.notion.so/U-A-High-School-THM-Easy-243bb3079a3f80dc9cb5cfd5c3d88166?source=copy_link">CTF - U.A High School 3/08/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/The-Sticker-Shop-THM-Easy-235bb3079a3f8035850bcb42fd44bf9c?source=copy_link">CTF - The Sticker Shop 19/07/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/Billing-THM-Easy-233bb3079a3f8047b72bd2b3ce5fd258">CTF - Billing 19/07/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/Publisher-THM-Easy-235bb3079a3f80f49026e951c9310335?source=copy_link">CTF - Publisher 17/07/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/Ignite-THM-Easy-235bb3079a3f801c8858dcc39b3b534c?source=copy_link">CTF - Ignite 16/07/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/Rabbit-Store-THM-Medium-235bb3079a3f804fab00c450f2a56e61?source=copy_link">CTF - Rabbit Store 14/07/2025</a></li>
-    <li><a href="https://witty-feet-07c.notion.site/Mr-Robot-THM-Medium-235bb3079a3f802c9742d30ba81ce6e0?source=copy_link">CTF - Mr. Robot 29/06/2025</a></li>
-  </ul>
+  <header>
+    <div class="container">
+      <img src="IMG_6168.jpeg" alt="Retrato de Daniel Moreno Fernández, especialista en ciberseguridad" class="profile-pic" loading="lazy" />
+      <div class="intro">
+        <h1>Writeups</h1>
+        <p class="lead">Documentación de CTFs y aprendizaje continuo</p>
+        <nav aria-label="Menú principal">
+          <a href="index.html">Inicio</a>
+          <a href="auditorias.html">Auditorías</a>
+          <a href="https://tryhackme.com/p/h4cksito" target="_blank" rel="noopener noreferrer">TryHackMe</a>
+          <a href="#lista">Listado</a>
+          <a href="#contact">Contacto</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main class="container">
+    <section id="lista" class="card" aria-label="Listado de writeups">
+      <h2>Mis Writeups</h2>
+      <ul>
+        <li><a href="https://www.notion.so/U-A-High-School-THM-Easy-243bb3079a3f80dc9cb5cfd5c3d88166?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — U.A High School (03/08/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/The-Sticker-Shop-THM-Easy-235bb3079a3f8035850bcb42fd44bf9c?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — The Sticker Shop (19/07/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/Billing-THM-Easy-233bb3079a3f8047b72bd2b3ce5fd258" target="_blank" rel="noopener noreferrer">CTF — Billing (19/07/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/Publisher-THM-Easy-235bb3079a3f80f49026e951c9310335?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — Publisher (17/07/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/Ignite-THM-Easy-235bb3079a3f801c8858dcc39b3b534c?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — Ignite (16/07/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/Rabbit-Store-THM-Medium-235bb3079a3f804fab00c450f2a56e61?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — Rabbit Store (14/07/2025)</a></li>
+        <li><a href="https://witty-feet-07c.notion.site/Mr-Robot-THM-Medium-235bb3079a3f802c9742d30ba81ce6e0?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — Mr. Robot (29/06/2025)</a></li>
+      </ul>
+    </section>
+
+    <section id="contact" class="card" aria-label="Contacto">
+      <h2>Contacto</h2>
+      <p>
+        Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
+        Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a><br />
+        Linkedin: <a href="https://www.linkedin.com/in/danielmoref" target="_blank" rel="noopener noreferrer">Daniel Moreno Fernández</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Daniel Moreno Fernández</p>
+  </footer>
 </body>
 </html>
