--- a/write.html
+++ b/write.html
@@ -31,6 +31,7 @@
     <section id="lista" class="card" aria-label="Listado de writeups">
       <h2>Mis Writeups</h2>
       <ul>
+        <li><a href="https://www.notion.so/Library-THM-Easy-24abb3079a3f8091a0b0d5747cbeb51d?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — Library (14/08/2025)</a></li>
         <li><a href="https://www.notion.so/U-A-High-School-THM-Easy-243bb3079a3f80dc9cb5cfd5c3d88166?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — U.A High School (03/08/2025)</a></li>
         <li><a href="https://witty-feet-07c.notion.site/The-Sticker-Shop-THM-Easy-235bb3079a3f8035850bcb42fd44bf9c?source=copy_link" target="_blank" rel="noopener noreferrer">CTF — The Sticker Shop (19/07/2025)</a></li>
         <li><a href="https://witty-feet-07c.notion.site/Billing-THM-Easy-233bb3079a3f8047b72bd2b3ce5fd258" target="_blank" rel="noopener noreferrer">CTF — Billing (19/07/2025)</a></li>
