--- a/lenguaje/index.html
+++ b/lenguaje/index.html
@@ -105,6 +105,27 @@ fn sum(a: u32, b: u32) -> u32 pure {
     <div class="container">
       <span>© 2025 H4XLang · Proyecto de h4cksito</span>
     </div>
+  
+  <section>
+    <div class="container">
+      <h2 class="section-title">Roadmap</h2>
+      <p class="small">Versión completa disponible en <a href="./docs/ROADMAP.md">ROADMAP.md</a></p>
+      <div class="grid">
+        <div class="card"><strong>F0 — Fundamentos</strong><br/>Cierre de decisiones, SPEC v0.1, arquitectura.</div>
+        <div class="card"><strong>F1 — Núcleo</strong><br/>Gramática, AST, type-checker básico.</div>
+        <div class="card"><strong>F2 — Memoria</strong><br/>Ownership, tipos lineales, pruebas sin UAF.</div>
+        <div class="card"><strong>F3 — Wasm</strong><br/>Generador Wasm, sandbox, CLI básica.</div>
+        <div class="card"><strong>F4 — Stdlib + FFI</strong><br/>Colecciones, crypto mínima, FFI C.</div>
+        <div class="card"><strong>F5 — Verificación</strong><br/>Contracts, SMT opcional, builds reproducibles.</div>
+        <div class="card"><strong>F6 — DX</strong><br/>Extensión VSCode, tutorial 60min.</div>
+        <div class="card"><strong>F7 — Beta</strong><br/>Bindings, fuzzing, benchmarks.</div>
+        <div class="card"><strong>F8 — Efectos</strong><br/>Control de efectos, capabilities.</div>
+        <div class="card"><strong>F9 — Ecosistema</strong><br/>Registro de paquetes, sello Verified.</div>
+        <div class="card"><strong>F10 — Monetización</strong><br/>Cloud Pro, Enterprise, clientes piloto.</div>
+      </div>
+    </div>
+  </section>
+
   </footer>
 
   <script src="./app.js"></script>
