--- a/index.html
+++ b/index.html
@@ -12,46 +12,47 @@
 <body>
   <header>
     <div class="container">
-      <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" />
+      <img src="IMG_6168.jpeg" alt="Foto de Daniel Moreno Fernández" class="profile-pic" loading="lazy" />
       <div class="intro">
         <h1>Daniel Moreno Fernández</h1>
         <p class="lead">Apasionado de la ciberseguridad • Alias <strong>h4cksito</strong></p>
         <nav aria-label="Menú principal">
-          <nav>
-           <a href="#about">Sobre mí</a>
-           <a href="auditorias.html">Auditorías</a>
-           <a href="https://tryhackme.com/p/h4cksito">Tryhackme</a>
-           <a href="#training">Formación</a>
-           <a href="write.html">Writeups</a>
-           <a href="#now">En progreso</a>
-           <a href="#contact">Contacto</a>
-          </nav>
+          <a href="#about">Sobre mí</a>
+          <a href="auditorias.html">Auditorías</a>
+          <a href="https://tryhackme.com/p/h4cksito" target="_blank" rel="noopener noreferrer">TryHackMe</a>
+          <a href="#training">Formación</a>
+          <a href="write.html">Writeups</a>
+          <a href="#now">En progreso</a>
+          <a href="#contact">Contacto</a>
+        </nav>
       </div>
     </div>
   </header>
 
   <main class="container">
-    <section id="about" class="card" aria-label="Sobre mí">
-      <h2>Sobre mí</h2>
+    <section id="about" class="card" aria-labelledby="about-title">
+      <h2 id="about-title">Sobre mí</h2>
       <p>Soy <strong>Daniel</strong>, estudiante de <em>hacking ético</em> con el objetivo de convertirme en <strong>pentester profesional</strong>. Disfruto explorando vulnerabilidades reales de forma legal y documentando lo aprendido para compartirlo con la comunidad.</p>
     </section>
 
-    <section id="training" class="card" aria-label="Formación">
-      <h2>Formación</h2>
+    <section id="training" class="card" aria-labelledby="training-title">
+      <h2 id="training-title">Formación</h2>
       <ul>
         <li>Rutas <strong>Junior Penetration Tester</strong> y <strong>Web Application Security</strong> en TryHackMe</li>
         <li>Especialización en <em>escalada de privilegios</em> y <em>seguridad web</em></li>
       </ul>
     </section>
 
-    <section id="certificate" class="card" aria-label="Certificaciones">
-      <h2>Certificaciones</h2>
-      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf" target="_blank" rel="noopener noreferrer"><strong>Jr Penetration Tester</strong></a> 29/06/2025</p>
-      <p>Certificación <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-0IRVOB3JPI.png" target="_blank" rel="noopener noreferrer"><strong>Web Fundamentals</strong></a> 23/07/2025</p>
+    <section id="certificate" class="card" aria-labelledby="certificate-title">
+      <h2 id="certificate-title">Certificaciones</h2>
+      <ul>
+        <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-FBSSONOKEI.pdf" target="_blank" rel="noopener noreferrer"><strong>Jr Penetration Tester</strong></a> — 29/06/2025</li>
+        <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-0IRVOB3JPI.png" target="_blank" rel="noopener noreferrer"><strong>Web Fundamentals</strong></a> — 23/07/2025</li>
+      </ul>
     </section>
 
-    <section id="now" class="card" aria-label="En progreso">
-      <h2>En progreso</h2>
+    <section id="now" class="card" aria-labelledby="now-title">
+      <h2 id="now-title">En progreso</h2>
       <ul>
         <li>Preparación intensiva para el <strong>eJPT</strong></li>
         <li>Documentar nuevas máquinas de <strong>TryHackMe</strong></li>
@@ -59,18 +60,20 @@
       </ul>
     </section>
 
-    <section id="contact" class="card" aria-label="Contacto">
-      <h2>Contacto</h2>
-      <p>
-        Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
-        Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a><br />
-        Linkedin: <a href="https://www.linkedin.com/in/danielmoref" target="_blank" rel="noopener noreferrer">Daniel Moreno Fernández</a>
-      </p>
+    <section id="contact" class="card" aria-labelledby="contact-title">
+      <h2 id="contact-title">Contacto</h2>
+      <address>
+        <p>
+          📧 Correo: <a href="mailto:h4cksito@proton.me">h4cksito@proton.me</a><br />
+          🐦 Twitter: <a href="https://twitter.com/h4cksito" target="_blank" rel="noopener noreferrer">@h4cksito</a><br />
+          💼 LinkedIn: <a href="https://www.linkedin.com/in/danielmoref" target="_blank" rel="noopener noreferrer">Daniel Moreno Fernández</a>
+        </p>
+      </address>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Daniel Moreno Fernández</p>
+    <p>© 2025 Daniel Moreno Fernández — Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
