--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav aria-label="Menú principal">
           <a href="#about">Sobre mí</a>
           <a href="auditorias.html">Auditorías</a>
+          <a href="/lenguaje/index.html" target="_blank" rel="noopener noreferrer">H4XLANG</a>
           <a href="https://tryhackme.com/p/h4cksito" target="_blank" rel="noopener noreferrer">TryHackMe</a>
           <a href="#training">Formación</a>
           <a href="write.html">Writeups</a>
